[tool.poetry]

name = "arger"
version = "1.4.4"
description = "Create argparser automatically from functions"

license = "MIT"

authors = ["Noortheen Raja <jnoortheen@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/arger"
documentation = "https://arger.readthedocs.io"
repository = "https://github.com/jnoortheen/arger"

keywords = []
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]

python = ">=3.8,<4.0"
typing-extensions = ">3.7.4"


[tool.poetry.dev-dependencies]

# Formatters
black =  "*"
isort = { version = "*", python = "^3.6" }

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "*"

# Testing
pytest = "*"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"
pytest-lazy-fixture = "*"

# Reports
#coveragespace = "^3.1.1"

# Documentation
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = { version = "*" }
pytkdocs = { version = "*", python = "^3.8" }
mknotebooks = "*"
pymdown-extensions = "*"
pygments = "*"

# Tooling
ipython = "*"
tox = "*"
jupyter = "*"
better-exceptions = "*"
git-changelog = { version = "*", python = "^3.6" }
colorama = "*"
types-setuptools = "*"

[tool.black]

target-version = ["py38",]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
