[tool.black]

target-version = ["py38", ]
skip-string-normalization = true

[project.optional-dependencies]
dev = [
    "ipython",
    "tox",
    "jupyter",
    "better-exceptions",
    "git-changelog",
    "colorama",
]
lint = [
    "pydocstyle",
    "pylint>=2.11",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-describe",
    "pytest-expecter",
    "pytest-random",
    "freezegun",
    "pytest-lazy-fixture",
    "nbformat",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "pytkdocs",
    "mknotebooks",
    "pymdown-extensions",
    "pygments",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    { name = "Noortheen Raja", email = "jnoortheen@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8,<4.0"
dependencies = [
    "typing-extensions>3.7.4",
]
name = "arger"
version = "1.4.7"
description = "Create argparser automatically from functions"
readme = "README.md"
keywords = []
classifiers = ["Development Status :: 1 - Planning", "Natural Language :: English", "Operating System :: OS Independent", "Environment :: Console", "Intended Audience :: Developers", "License :: Freely Distributable", "Programming Language :: Python", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3"]

[project.urls]
homepage = "https://pypi.org/project/arger"
repository = "https://github.com/jnoortheen/arger"
documentation = "https://arger.readthedocs.io"


[tool.pdm.scripts]
post_install = "pre-commit install"
clean-build = "rm -rf *.spec dist build"
clean-docs = "rm -rf docs/*.png site"
clean-test = "rm -rf .cache .pytest .coverage htmlcov"
clean-install = "find $(PACKAGES) -name '__pycache__' -delete && rm -rf *.egg-info"
clean = { composite = ["clean-build", "clean-docs", "clean-test", "clean-install"] }
serve-docs = "mkdocs serve"
lint = "mypy arger tests"
